Remove tooz from external/unverified

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ usedevelop = True
 sitepackages = False
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-install_command = pip install -U --allow-external tooz --allow-unverified tooz {opts} {packages}
+install_command = pip install -U {opts} {packages}
 commands = {toxinidir}/run-tests.sh {posargs}
 
 [testenv:pep8]
