--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py33,pypy,pep8
+envlist = py27-integ,py27,py33,pypy,pep8
 
 [testenv]
 usedevelop = True
@@ -14,6 +14,10 @@ deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
        hacking<0.9
 commands = flake8
+
+[testenv:py27-integ]
+baseversion = 2.7
+commands = {toxinidir}/run-integration-tests.sh {posargs}
 
 [testenv:venv]
 commands = {posargs}
