--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27-integ,py27,py33,pypy,pep8
+envlist = py27-postgresql,py27,py33,pypy,pep8
 
 [testenv]
 usedevelop = True
@@ -15,9 +15,9 @@ deps = -r{toxinidir}/requirements.txt
        hacking<0.9
 commands = flake8
 
-[testenv:py27-integ]
+[testenv:py27-postgresql]
 baseversion = 2.7
-commands = {toxinidir}/run-integration-tests.sh {posargs}
+commands = {toxinidir}/run-postgresql-tests.sh {posargs}
 
 [testenv:venv]
 commands = {posargs}
