Port to Python 3
Change-Id: I3ec0fd1064aa4fb3467f9881b03ce6ba4bc64458

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 babel
 iso8601
-lockfile
+lockfile>=0.9.1
 netaddr
 oslo.config
 oslotest
@@ -14,3 +14,4 @@ sqlalchemy
 stevedore
 tooz
 voluptuous
+werkzeug
