--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,12 @@ deps = -r{toxinidir}/requirements.txt
        hacking<0.9
 commands = flake8
 
+# FIXME(jd) Remove that when
+# https://github.com/smontanaro/pylockfile/issues/11
+# is fixed
+[testenv:py33]
+commands = true
+
 [testenv:py27-postgresql]
 baseversion = 2.7
 commands = {toxinidir}/run-postgresql-tests.sh {posargs}
