Add gnocchi-dbsync command
Additionally, add unified CLI commands services preparation
to be used by gnocchi-api and gnocchi-dbsync.

Change-Id: I534f6221a2e9c6810053be4872acad15cc69d551

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,8 @@ gnocchi.indexer =
     sqlalchemy = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
 
 console_scripts =
-    gnocchi-api = gnocchi.rest.app:main
+    gnocchi-api = gnocchi.cli:api
+    gnocchi-dbsync = gnocchi.cli:storage_dbsync
 
 [build_sphinx]
 all_files = 1
