Limit pandas version
Change-Id: Ifa7fdba4abfb88176ca5e72e509b6a66b4cc3fea

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ lockfile>=0.9.1
 netaddr
 oslo.config
 oslotest
-pandas
+pandas<0.14  # Until https://github.com/pydata/pandas/issues/7284 is fixed
 pecan
 posix_ipc
 psycopg2
