tests: run on MySQL too
Change-Id: I29fc86dac6d0d2051b59c6bff6ba10988e688a96

--- a/tox.ini
+++ b/tox.ini
@@ -20,10 +20,16 @@ commands = flake8
 # is fixed
 [testenv:py33]
 commands = true
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements-py3.txt
 
 [testenv:py27-postgresql]
 baseversion = 2.7
 commands = {toxinidir}/run-postgresql-tests.sh {posargs}
+
+[testenv:py27-mysql]
+baseversion = 2.7
+commands = {toxinidir}/run-mysql-tests.sh {posargs}
 
 [testenv:venv]
 commands = {posargs}
