Fix test with pecan>=0.6
Change-Id: I2a439e0aeca00a591db87a275ae7a81da973f571

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ netaddr
 oslo.config
 oslotest
 pandas<0.14  # Until https://github.com/pydata/pandas/issues/7284 is fixed
-pecan<0.6.0
+pecan
 posix_ipc
 python-swiftclient
 six
