--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ commands = {toxinidir}/run-tests.sh {posargs}
 [testenv:pep8]
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-       hacking<0.9
+       hacking>=0.9.2,<0.10
 commands = flake8
 
 # FIXME(jd) Remove that when
@@ -35,7 +35,7 @@ commands = {toxinidir}/run-mysql-tests.sh {posargs}
 commands = {posargs}
 
 [flake8]
-ignore = E126
+ignore = E126,H405,H904
 exclude = .tox,doc
 show-source = true
 
