--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ commands = {toxinidir}/run-mysql-tests.sh {posargs}
 commands = {posargs}
 
 [flake8]
-ignore = None
+ignore = E126
 exclude = .tox,doc
 show-source = true
 
