--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ packages =
 gnocchi.storage =
     null = gnocchi.storage.null:NullStorage
     swift = gnocchi.storage.swift:SwiftStorage
+    file = gnocchi.storage.file:FileStorage
 
 gnocchi.indexer =
     null = gnocchi.indexer.null:NullIndexer
