--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ babel
 iso8601
 lockfile>=0.9.1
 netaddr
-oslo.config
+oslo.config>=1.4.0.0a1
 oslo.db
+oslo.utils
 oslotest
 pandas<0.14  # Until https://github.com/pydata/pandas/issues/7284 is fixed
 pecan
