Remove pandas version limitation
The bug has been fixed.

Change-Id: I6058a8bb27734d12153992e3da8accbb000f8b9b

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ oslo.config>=1.4.0.0a1
 oslo.db
 oslo.utils
 oslotest
-pandas<0.14  # Until https://github.com/pydata/pandas/issues/7284 is fixed
+pandas
 pecan
 posix_ipc
 python-swiftclient
