--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27-postgresql,py27,py33,pypy,pep8
+envlist = py27-postgresql,py27,py33,py34,pypy,pep8
 
 [testenv]
 usedevelop = True
@@ -19,6 +19,14 @@ commands = flake8
 # https://github.com/smontanaro/pylockfile/issues/11
 # is fixed
 [testenv:py33]
+commands = true
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements-py3.txt
+
+# FIXME(jd) Remove that when
+# https://github.com/smontanaro/pylockfile/issues/11
+# is fixed
+[testenv:py34]
 commands = true
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements-py3.txt
