Add a gnocchi dispatcher for ceilometer
This introduces a new dispatcher for Gnocchi that is able to
transform and publish the Ceilometer samples to Gnocchi.

Co-Authored-by: Julien Danjou <julien@danjou.info>

Change-Id: I424b991075ddc6ca7ef6bd7c6d17db247bf90c83

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,13 @@ console_scripts =
 oslo.config.opts =
     gnocchi = gnocchi.opts:list_opts
 
+ceilometer.dispatcher =
+    gnocchi = gnocchi.ceilometer.dispatcher:GnocchiDispatcher
+
+gnocchi.ceilometer.resource =
+    instance = gnocchi.ceilometer.resources.instance:Instance
+    swift_account = gnocchi.ceilometer.resources.swift_account:SwiftAccount
+
 [build_sphinx]
 all_files = 1
 build-dir = doc/build
