--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ usedevelop = True
 sitepackages = False
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-install_command = pip install -U {opts} {packages}
+install_command = pip install -U --allow-external ceilometer --allow-insecure ceilometer {opts} {packages}
 commands = python setup.py testr --slowest --testr-args="{posargs}"
 
 [testenv:pep8]
@@ -65,4 +65,5 @@ commands = doc8 doc/source
 [hacking]
 import_exceptions =
   gnocchi.openstack.common.gettextutils
+  ceilometer.openstack.common.gettextutils
   six.moves.mox
