--- a/.testr.conf
+++ b/.testr.conf
@@ -1,4 +1,4 @@
 [DEFAULT]
-test_command=${PYTHON:-python} -m subunit.run discover gnocchi $LISTOPT $IDOPTION
+test_command=${PYTHON:-python} -m subunit.run discover -t . gnocchi $LISTOPT $IDOPTION
 test_id_option=--load-list $IDFILE
 test_list_option=--list
