storage: switch to ipc:// coordinator by default
Change-Id: Ief184f7f2cae67a9617f4803a5f629067538f44a

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ sitepackages = False
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 install_command = pip install -U {opts} {packages}
-commands = {toxinidir}/run-tests.sh {posargs}
+commands = python setup.py testr --slowest --testr-args="{posargs}"
 
 [testenv:pep8]
 deps = -r{toxinidir}/requirements.txt
