--- a/tox.ini
+++ b/tox.ini
@@ -15,19 +15,11 @@ deps = -r{toxinidir}/requirements.txt
        hacking>=0.9.2,<0.10
 commands = flake8
 
-# FIXME(jd) Remove that when
-# https://github.com/smontanaro/pylockfile/issues/11
-# is fixed
 [testenv:py33]
-commands = true
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements-py3.txt
 
-# FIXME(jd) Remove that when
-# https://github.com/smontanaro/pylockfile/issues/11
-# is fixed
 [testenv:py34]
-commands = true
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements-py3.txt
 
@@ -38,6 +30,18 @@ commands = {toxinidir}/run-postgresql-tests.sh {posargs}
 [testenv:py27-mysql]
 baseversion = 2.7
 commands = {toxinidir}/run-mysql-tests.sh {posargs}
+
+[testenv:py33-postgresql]
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements-py3.txt
+baseversion = 3.4
+commands = {toxinidir}/run-postgresql-tests.sh {posargs}
+
+[testenv:py34-postgresql]
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements-py3.txt
+baseversion = 3.4
+commands = {toxinidir}/run-postgresql-tests.sh {posargs}
 
 [testenv:venv]
 commands = {posargs}
