Fix pep8 errors
Change-Id: Iebef91ab771f445af7757d690dc6d232a5498cf3
Signed-off-by: Julien Danjou <julien@danjou.info>

--- a/tox.ini
+++ b/tox.ini
@@ -47,8 +47,7 @@ commands = {toxinidir}/run-postgresql-tests.sh {posargs}
 commands = {posargs}
 
 [flake8]
-ignore = E126,H405,H904
-exclude = .tox,doc
+exclude = .tox,doc,gnocchi/openstack/common
 show-source = true
 
 [hacking]
