Add config generator support
Change-Id: Ia53997fce3e0e69c3c736c7b088c40a619755c7d

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,9 @@ console_scripts =
     gnocchi-api = gnocchi.cli:api
     gnocchi-dbsync = gnocchi.cli:storage_dbsync
 
+oslo.config.opts =
+    gnocchi = gnocchi:list_opts
+
 [build_sphinx]
 all_files = 1
 build-dir = doc/build
