--- a/tox.ini
+++ b/tox.ini
@@ -50,6 +50,12 @@ commands = {posargs}
 exclude = .tox,doc,gnocchi/openstack/common
 show-source = true
 
+[testenv:genconfig]
+commands = mkdir -p etc/gnocchi
+           oslo-config-generator --output-file etc/gnocchi/gnocchi.conf \
+           --namespace gnocchi \
+           --namespace oslo.db
+
 [hacking]
 import_exceptions =
   gnocchi.openstack.common.gettextutils
