Keep gnocchi/__init__.py empty
Keep gnocchi/__init__.py to avoid to have the whole gnocchi
code loaded even a submodule don't need it.

Specialy for the ceilometer middleware that don't use gnocchi code at
all.

Change-Id: Ic3986aed1ab2f3c5374df410d447c7eb3a931753

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ console_scripts =
     gnocchi-dbsync = gnocchi.cli:storage_dbsync
 
 oslo.config.opts =
-    gnocchi = gnocchi:list_opts
+    gnocchi = gnocchi.opts:list_opts
 
 [build_sphinx]
 all_files = 1
