Use basepython instead of baseversion
Baseversion is not compatible with tox 1.7
so use basepython instead.

And also fix python3 issue to pass gate

Related-Bug: #1376691

Change-Id: Ia9f60388f275e86febb890d5d1b66663a0089ff7

--- a/tox.ini
+++ b/tox.ini
@@ -24,23 +24,23 @@ deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements-py3.txt
 
 [testenv:py27-postgresql]
-baseversion = 2.7
+basepython = python2.7
 commands = {toxinidir}/run-postgresql-tests.sh {posargs}
 
 [testenv:py27-mysql]
-baseversion = 2.7
+basepython = python2.7
 commands = {toxinidir}/run-mysql-tests.sh {posargs}
 
 [testenv:py33-postgresql]
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements-py3.txt
-baseversion = 3.4
+basepython = python3.4
 commands = {toxinidir}/run-postgresql-tests.sh {posargs}
 
 [testenv:py34-postgresql]
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements-py3.txt
-baseversion = 3.4
+basepython = python3.4
 commands = {toxinidir}/run-postgresql-tests.sh {posargs}
 
 [testenv:venv]
