rest: allow to use timespan to define archive policy
Users can now use a timespan to specify an archive policy, which makes
it easier to define what one might actually want to retrieve as users:

POST /v1/archive_policy
=>  {"name": "foobar",
    "definition": [{"timespan": "1 day", "granularity": 5}]}

<= {"name": "foobar",
    "definition": [{"timespan": "1 day", "granularity": 5, "points": 17280}]}

Change-Id: I121a7c307c93b2ffc8e65f681b62d61a70b7cbd7

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,9 @@ pandas
 pecan
 posix_ipc
 python-swiftclient
+pytimeparse
+# pytimeparse misses this dep for now
+future
 six
 sqlalchemy
 sqlalchemy-utils
