--- a/tox.ini
+++ b/tox.ini
@@ -56,6 +56,12 @@ commands = mkdir -p etc/gnocchi
            --namespace gnocchi \
            --namespace oslo.db
 
+[testenv:docs]
+deps = {[testenv]deps}
+       doc8
+commands = doc8 doc/source
+           python setup.py build_sphinx
+
 [hacking]
 import_exceptions =
   gnocchi.openstack.common.gettextutils
