--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ oslo.config>=1.4.0.0a1
 oslo.db>=0.5.0
 oslo.serialization>=1.0.0
 oslo.utils>=0.3.0
+oslosphinx>=2.2.0  # Apache-2.0
 oslotest
 pandas
 pecan<0.8
