--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,6 @@ oslosphinx>=2.2.0  # Apache-2.0
 oslotest
 pandas
 pecan<0.8
-posix_ipc
 python-swiftclient
 pytimeparse
 # pytimeparse misses this dep for now
@@ -19,6 +18,7 @@ six
 sqlalchemy
 sqlalchemy-utils
 stevedore
+sysv_ipc>=0.6.8
 tooz>=0.4
 voluptuous
 werkzeug
