aggregates: added moving average
Change-Id: I8778b9ac50189ad9c964c2db3cc3735699ab240e

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,9 @@ gnocchi.indexer =
     null = gnocchi.indexer.null:NullIndexer
     sqlalchemy = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
 
+gnocchi.aggregates =
+    moving-average = gnocchi.aggregates.moving_stats:MovingAverage
+
 console_scripts =
     gnocchi-api = gnocchi.cli:api
     gnocchi-dbsync = gnocchi.cli:storage_dbsync
