--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ oslo.utils>=0.3.0
 oslosphinx>=2.2.0  # Apache-2.0
 oslotest
 pandas
-pecan<0.8
+pecan!=0.8
 python-swiftclient
 pytimeparse
 # pytimeparse misses this dep for now
