Fix doc8 errors
Change-Id: I02aa66a0b7c7e872bd5ad048c47d81538f8540fc

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,11 @@ deps = -r{toxinidir}/requirements.txt
        hacking>=0.9.2,<0.10
 commands = flake8
 
+[testenv:py27]
+# NOTE(jd): doc8 does not work with Python 3
+commands = doc8 doc/source
+           python setup.py testr --slowest --testr-args="{posargs}"
+
 [testenv:py33]
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements-py3.txt
@@ -57,8 +62,6 @@ commands = mkdir -p etc/gnocchi
            --namespace oslo.db
 
 [testenv:docs]
-deps = {[testenv]deps}
-       doc8
 commands = doc8 doc/source
            python setup.py build_sphinx
 
