tests: use SQL scripts to setup env and run any command
Change-Id: I3a21775bc3879bf873f5dcfe3b4108d0b1a94e32

--- a/tox.ini
+++ b/tox.ini
@@ -30,23 +30,23 @@ deps = -r{toxinidir}/requirements.txt
 
 [testenv:py27-postgresql]
 basepython = python2.7
-commands = {toxinidir}/run-postgresql-tests.sh {posargs}
+commands = {toxinidir}/setup-postgresql-tests.sh python setup.py testr --slowest --testr-args="{posargs}"
 
 [testenv:py27-mysql]
 basepython = python2.7
-commands = {toxinidir}/run-mysql-tests.sh {posargs}
+commands = {toxinidir}/setup-mysql-tests.sh python setup.py testr --slowest --testr-args="{posargs}"
 
 [testenv:py33-postgresql]
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements-py3.txt
 basepython = python3.4
-commands = {toxinidir}/run-postgresql-tests.sh {posargs}
+commands = {toxinidir}/setup-postgresql-tests.sh python setup.py testr --slowest --testr-args="{posargs}"
 
 [testenv:py34-postgresql]
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements-py3.txt
 basepython = python3.4
-commands = {toxinidir}/run-postgresql-tests.sh {posargs}
+commands = {toxinidir}/setup-postgresql-tests.sh python setup.py testr --slowest --testr-args="{posargs}"
 
 [testenv:venv]
 commands = {posargs}
