docs: generate HTTP request from real data
This creates a new special Sphinx module that allows to generate live
HTTP requests/responses and format them using Sphinx httpdomain.

This makes sure the documentation is up to date when generated.

Change-Id: Icc0975743b48a686343095a460c904adeaa31cb7

--- a/tox.ini
+++ b/tox.ini
@@ -49,7 +49,7 @@ basepython = python3.4
 commands = {toxinidir}/setup-postgresql-tests.sh python setup.py testr --slowest --testr-args="{posargs}"
 
 [testenv:venv]
-commands = {posargs}
+commands = {toxinidir}/setup-postgresql-tests.sh {posargs}
 
 [flake8]
 exclude = .tox,doc,gnocchi/openstack/common
@@ -62,8 +62,8 @@ commands = mkdir -p etc/gnocchi
            --namespace oslo.db
 
 [testenv:docs]
-commands = doc8 doc/source
-           python setup.py build_sphinx
+commands = doc8 --ignore-path doc/source/rest.rst doc/source
+           {toxinidir}/setup-postgresql-tests.sh python setup.py build_sphinx
 
 [hacking]
 import_exceptions =
