--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ packages =
 gnocchi.storage =
     null = gnocchi.storage.null:NullStorage
     swift = gnocchi.storage.swift:SwiftStorage
+    ceph = gnocchi.storage.ceph:CephStorage
     file = gnocchi.storage.file:FileStorage
 
 gnocchi.indexer =
