Fix Ceilometer dispatcher after i18n transition
Change-Id: Ie655effc816c5ca39a659c81f9e723d9b534acaa

--- a/tox.ini
+++ b/tox.ini
@@ -65,5 +65,5 @@ commands = doc8 doc/source
 [hacking]
 import_exceptions =
   gnocchi.openstack.common.gettextutils
-  ceilometer.openstack.common.gettextutils
+  ceilometer.i18n
   six.moves.mox
