rest: allow to render measures in HTML
This adds some HTML template to render a graph of the measures when GET
/v1/metric/<uuid>/measures is requested with a Web browser.

Change-Id: Ia13286c601121cf0a9689b46f12bc0a18fb68425

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ oslosphinx>=2.2.0  # Apache-2.0
 oslotest
 pandas
 pecan!=0.8
+flask
 python-swiftclient
 pytimeparse
 # pytimeparse misses this dep for now
