Initial statsd daemon implementation
Change-Id: I560a2dc6315f878f936fa33e79f2e8f5bf293f3e

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,7 @@ gnocchi.aggregates =
 console_scripts =
     gnocchi-api = gnocchi.cli:api
     gnocchi-dbsync = gnocchi.cli:storage_dbsync
+    gnocchi-statsd = gnocchi.cli:statsd
     carbonara-create = gnocchi.carbonara:create_archive_file
     carbonara-dump = gnocchi.carbonara:dump_archive_file
     carbonara-update = gnocchi.carbonara:update_archive_file
