Upgrade to hacking 0.10
Change-Id: If7abef5db97172f13cca1ac32e6d1d5d8e334d05

--- a/tox.ini
+++ b/tox.ini
@@ -10,9 +10,7 @@ install_command = pip install -U --allow-external ceilometer --allow-insecure ce
 commands = python setup.py testr --slowest --testr-args="{posargs}"
 
 [testenv:pep8]
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
-       hacking>=0.9.2,<0.10
+deps = hacking>=0.10,<0.11
 commands = flake8
 
 [testenv:py27]
