tox: fix doc8 command in py27
Change-Id: I1b793e0de5145c9dc0c8023d904dce5bef2cc992

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ commands = flake8
 
 [testenv:py27]
 # NOTE(jd): doc8 does not work with Python 3
-commands = doc8 doc/source
+commands = doc8 --ignore-path doc/source/rest.rst doc/source
            python setup.py testr --slowest --testr-args="{posargs}"
 
 [testenv:py33]
