Devstack plugin for Gnocchi
This change adds a devstack plugin for gnocchi
and documents how to enable it.

Add this to the localrc of devstasck:

  enable_plugin gnocchi https://github.com/stackforge/gnocchi master
  enable_service gnocchi-api

Change-Id: I56fc3794db4bd7a5a6ad038c4dc344804b2903c0

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27-postgresql,py27,py33,py34,pypy,pep8
+envlist = py27-postgresql,py27,py33,py34,pypy,pep8,bashate
 
 [testenv]
 usedevelop = True
@@ -8,6 +8,11 @@ deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 install_command = pip install -U --allow-external ceilometer --allow-insecure ceilometer {opts} {packages}
 commands = python setup.py testr --slowest --testr-args="{posargs}"
+
+[testenv:bashate]
+deps = bashate
+whitelist_externals = bash
+commands = bashate -v devstack/plugin.sh
 
 [testenv:pep8]
 deps = hacking>=0.10,<0.11
