Add Carbonara CLI tools
Change-Id: Ib4db8743ff065b1e938d178943eff6c35f5a900b

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,9 @@ gnocchi.aggregates =
 console_scripts =
     gnocchi-api = gnocchi.cli:api
     gnocchi-dbsync = gnocchi.cli:storage_dbsync
+    carbonara-create = gnocchi.carbonara:create_archive_file
+    carbonara-dump = gnocchi.carbonara:dump_archive_file
+    carbonara-update = gnocchi.carbonara:update_archive_file
 
 oslo.config.opts =
     gnocchi = gnocchi.opts:list_opts
