Add gate hook that test the devstack setup
Change-Id: I89a2b7e316b4d0c542b90e02fefd7fc992127acb

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ commands = python setup.py testr --slowest --testr-args="{posargs}"
 [testenv:bashate]
 deps = bashate
 whitelist_externals = bash
-commands = bashate -v devstack/plugin.sh
+commands = bashate -v devstack/plugin.sh devstack/gate/gate_hook.sh devstack/gate/post_test_hook.sh
 
 [testenv:pep8]
 deps = hacking>=0.10,<0.11
