--- a/tox.ini
+++ b/tox.ini
@@ -56,7 +56,8 @@ show-source = true
 commands = mkdir -p etc/gnocchi
            oslo-config-generator --output-file etc/gnocchi/gnocchi.conf \
            --namespace gnocchi \
-           --namespace oslo.db
+           --namespace oslo.db \
+           --namespace oslo.log
 
 [testenv:docs]
 commands = doc8 --ignore-path doc/source/rest.rst doc/source
