Add capabilities documentation
This change adds the missing capabilities section into
the documentation.

Change-Id: I480a10064db921d04029e91baa219ad2495acb15

--- a/doc/source/rest.yaml
+++ b/doc/source/rest.yaml
@@ -192,3 +192,6 @@
     Content-Type: application/json
 
     {"memory": {"archive_policy_name": "low"}}
+
+- name: get-capabilities
+  request: GET /v1/capabilities HTTP/1.1
