Add volume resource
That patch adds volume resource into gnocchi

Change-Id: I41d8aa13db1aaaad786e3260edd67ccd82776bd4

--- a/setup.cfg
+++ b/setup.cfg
@@ -66,6 +66,7 @@ ceilometer.alarm.evaluator =
 gnocchi.ceilometer.resource =
     instance = gnocchi.ceilometer.resources.instance:Instance
     swift_account = gnocchi.ceilometer.resources.swift_account:SwiftAccount
+    volume = gnocchi.ceilometer.resources.volume:Volume
 
 [build_sphinx]
 all_files = 1
