--- a/tox.ini
+++ b/tox.ini
@@ -45,6 +45,12 @@ deps = -r{toxinidir}/requirements.txt
 basepython = python3.4
 commands = {toxinidir}/setup-postgresql-tests.sh python setup.py testr --slowest --testr-args="{posargs}"
 
+# This target provides a shortcut to running just the gabbi tests.
+[testenv:py27-gabbi]
+setenv = OS_TEST_PATH=gnocchi/tests/gabbi
+basepython = python2.7
+commands = {toxinidir}/setup-mysql-tests.sh python setup.py testr --testr-args="{posargs}"
+
 [testenv:venv]
 commands = {toxinidir}/setup-postgresql-tests.sh {posargs}
 
