rest: replace list+filter by search mechanism
This replaces the current very-limited search by attribute by the full
complex query system we implemented in the indexer.

It's exposed instead as POST /v1/search/resource/<type>.

Change-Id: I18aa1984bb617c090345e1fa66ff0b30cdd74e66

--- a/doc/source/rest.yaml
+++ b/doc/source/rest.yaml
@@ -156,8 +156,29 @@
 - name: list-resource-generic-details
   request: GET /v1/resource/generic?details=true HTTP/1.1
 
-- name: get-resource-for-user
-  request: GET /v1/resource/instance?user_id={{ scenarios['create-resource-instance']['response'].json['user_id'] }} HTTP/1.1
+- name: search-resource-for-user
+  request: |
+    POST /v1/search/resource/instance HTTP/1.1
+    Content-Type: application/json
+
+    {"=": {"user_id": "{{ scenarios['create-resource-instance']['response'].json['user_id'] }}"}}
+
+- name: search-resource-for-user-details
+  request: |
+    POST /v1/search/resource/generic?details=true HTTP/1.1
+    Content-Type: application/json
+
+    {"=": {"user_id": "{{ scenarios['create-resource-instance']['response'].json['user_id'] }}"}}
+
+- name: search-resource-for-user-after-timestamp
+  request: |
+    POST /v1/search/resource/instance HTTP/1.1
+    Content-Type: application/json
+
+    {"and": [
+      {"=": {"user_id": "{{ scenarios['create-resource-instance']['response'].json['user_id'] }}"}},
+      {">=": {"started_at": "2010-01-01"}}
+    ]}
 
 - name: get-resource-generic
   request: GET /v1/resource/generic/{{ scenarios['create-resource-generic']['response'].json['id'] }} HTTP/1.1
