Add a py27-cover tox target
This is useful when making or modifying tests to keep track of
impact.

Change-Id: I38148d8d525e3a7a35c8927b35c2731ef2704677

--- a/tox.ini
+++ b/tox.ini
@@ -51,6 +51,9 @@ setenv = OS_TEST_PATH=gnocchi/tests/gabbi
 basepython = python2.7
 commands = {toxinidir}/setup-mysql-tests.sh python setup.py testr --testr-args="{posargs}"
 
+[testenv:py27-cover]
+commands = {toxinidir}/setup-mysql-tests.sh python setup.py testr --coverage --testr-args="{posargs}"
+
 [testenv:venv]
 commands = {toxinidir}/setup-postgresql-tests.sh {posargs}
 
