--- a/tox.ini
+++ b/tox.ini
@@ -7,12 +7,12 @@ sitepackages = False
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 install_command = pip install -U --allow-external ceilometer --allow-insecure ceilometer {opts} {packages}
-commands = python setup.py testr --slowest --testr-args="{posargs}"
+commands = {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
 [testenv:bashate]
 deps = bashate
-whitelist_externals = bash
 commands = bashate -v devstack/plugin.sh devstack/gate/gate_hook.sh devstack/gate/post_test_hook.sh
+whitelist_externals = bash
 
 [testenv:pep8]
 deps = hacking>=0.10,<0.11
@@ -21,7 +21,7 @@ commands = flake8
 [testenv:py27]
 # NOTE(jd): doc8 does not work with Python 3
 commands = doc8 --ignore-path doc/source/rest.rst doc/source
-           python setup.py testr --slowest --testr-args="{posargs}"
+           {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
 [testenv:py33]
 deps = -r{toxinidir}/requirements.txt
@@ -33,23 +33,23 @@ deps = -r{toxinidir}/requirements.txt
 
 [testenv:py27-postgresql]
 basepython = python2.7
-commands = {toxinidir}/setup-postgresql-tests.sh python setup.py testr --slowest --testr-args="{posargs}"
+commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
 [testenv:py27-mysql]
 basepython = python2.7
-commands = {toxinidir}/setup-mysql-tests.sh python setup.py testr --slowest --testr-args="{posargs}"
+commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
 [testenv:py34-postgresql]
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements-py3.txt
 basepython = python3.4
-commands = {toxinidir}/setup-postgresql-tests.sh python setup.py testr --slowest --testr-args="{posargs}"
+commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
 # This target provides a shortcut to running just the gabbi tests.
 [testenv:py27-gabbi]
 setenv = OS_TEST_PATH=gnocchi/tests/gabbi
 basepython = python2.7
-commands = {toxinidir}/setup-mysql-tests.sh python setup.py testr --testr-args="{posargs}"
+commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
 [testenv:py27-cover]
 commands = {toxinidir}/setup-mysql-tests.sh python setup.py testr --coverage --testr-args="{posargs}"
