test: Use gabbi tests on live gnocchi-api
This change launches the gabbi tests suite on a real gnocchi-api
deployed with devstack but without the keystone middleware enabled.

Change-Id: I7d48bdd456406b89535e2351282e2bc6a0d6680b

--- a/tox.ini
+++ b/tox.ini
@@ -41,6 +41,11 @@ deps = -r{toxinidir}/requirements.txt
 basepython = python3.4
 commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
+[testenv:py27-gate]
+setenv = OS_TEST_PATH=gnocchi/tests/gabbi
+basepython = python2.7
+commands = {toxinidir}/tools/pretty_tox.sh '{posargs}'
+
 # This target provides a shortcut to running just the gabbi tests.
 [testenv:py27-gabbi]
 setenv = OS_TEST_PATH=gnocchi/tests/gabbi
