Remove Python 3.3 from tox
We don't gate on it anymore.

Change-Id: Ie483998cdeb21b1aefcc0ee4a6ae467912346592

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27-postgresql,py27,py33,py34,pypy,pep8,bashate
+envlist = py27-postgresql,py27,py34,pypy,pep8,bashate
 
 [testenv]
 usedevelop = True
@@ -22,10 +22,6 @@ commands = flake8
 # NOTE(jd): doc8 does not work with Python 3
 commands = doc8 --ignore-path doc/source/rest.rst doc/source
            {toxinidir}/tools/pretty_tox.sh '{posargs}'
-
-[testenv:py33]
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements-py3.txt
 
 [testenv:py34]
 deps = -r{toxinidir}/requirements.txt
