--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,8 @@ gnocchi.storage =
 
 gnocchi.indexer =
     null = gnocchi.indexer.null:NullIndexer
-    sqlalchemy = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
+    mysql = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
+    postgresql = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
 
 gnocchi.aggregates =
     moving-average = gnocchi.aggregates.moving_stats:MovingAverage
