Stop using global cfg.CONF object
This replaces the cfg.CONF object by a conf object we create when we
prepare the service. This drops usage of ignominies such as import_opt()
or the config fixture.

It also fixes the clash we had with Ceilometer conf object that broke
the gate.

Change-Id: I4de8e274c0acd4707bdc52b783dc8ae0d3397d08

--- a/tox.ini
+++ b/tox.ini
@@ -62,7 +62,8 @@ commands = mkdir -p etc/gnocchi
            oslo-config-generator --output-file etc/gnocchi/gnocchi.conf \
            --namespace gnocchi \
            --namespace oslo.db \
-           --namespace oslo.log
+           --namespace oslo.log \
+           --namespace keystonemiddleware.auth_token
 
 [testenv:docs]
 commands = doc8 --ignore-path doc/source/rest.rst doc/source
