Switch to oslo.policy
This removes the last usage of the incubator!

Change-Id: I7ecf3465460fc9e3d3b2709c34846896ee4d9035

--- a/tox.ini
+++ b/tox.ini
@@ -54,7 +54,7 @@ commands = {toxinidir}/setup-mysql-tests.sh python setup.py testr --coverage --t
 commands = {toxinidir}/setup-postgresql-tests.sh {posargs}
 
 [flake8]
-exclude = .tox,doc,gnocchi/openstack/common
+exclude = .tox,doc
 show-source = true
 
 [testenv:genconfig]
@@ -63,6 +63,7 @@ commands = mkdir -p etc/gnocchi
            --namespace gnocchi \
            --namespace oslo.db \
            --namespace oslo.log \
+           --namespace oslo.policy \
            --namespace keystonemiddleware.auth_token
 
 [testenv:docs]
