--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27-postgresql,py27,py34,pypy,pep8,bashate
+envlist = py27-postgresql-file,py27,py34,pypy,pep8,bashate
 
 [testenv]
 usedevelop = True
@@ -20,24 +20,63 @@ commands = flake8
 
 [testenv:py27]
 # NOTE(jd): doc8 does not work with Python 3
-commands = doc8 --ignore-path doc/source/rest.rst doc/source
-           {toxinidir}/tools/pretty_tox.sh '{posargs}'
+commands =
+  doc8 --ignore-path doc/source/rest.rst doc/source
+  {toxinidir}/run-tests.sh "postgresql mysql" "file swift ceph" {posargs}
 
 [testenv:py34]
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements-py3.txt
+commands = {toxinidir}/run-tests.sh postgresql "file swift ceph" {posargs}
 
-[testenv:py27-postgresql]
+[testenv:py27-postgresql-file]
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
 basepython = python2.7
 commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
-[testenv:py27-mysql]
+[testenv:py27-mysql-file]
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
 basepython = python2.7
 commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
-[testenv:py34-postgresql]
+[testenv:py34-postgresql-file]
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements-py3.txt
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
+basepython = python3.4
+commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+
+[testenv:py27-postgresql-swift]
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=swift
+basepython = python2.7
+commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+
+[testenv:py27-mysql-swift]
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=swift
+basepython = python2.7
+commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+
+[testenv:py34-postgresql-swift]
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements-py3.txt
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=swift
+basepython = python3.4
+commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+
+[testenv:py27-postgresql-ceph]
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=ceph
+basepython = python2.7
+commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+
+[testenv:py27-mysql-ceph]
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=ceph
+basepython = python2.7
+commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+
+[testenv:py34-postgresql-ceph]
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements-py3.txt
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=ceph
 basepython = python3.4
 commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
@@ -56,6 +95,7 @@ commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{po
 commands = {toxinidir}/setup-mysql-tests.sh python setup.py testr --coverage --testr-args="{posargs}"
 
 [testenv:venv]
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
 commands = {toxinidir}/setup-postgresql-tests.sh {posargs}
 
 [flake8]
@@ -72,6 +112,7 @@ commands = mkdir -p etc/gnocchi
            --namespace keystonemiddleware.auth_token
 
 [testenv:docs]
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
 commands = doc8 --ignore-path doc/source/rest.rst doc/source
            {toxinidir}/setup-postgresql-tests.sh python setup.py build_sphinx
 
