InfluxDB storage driver
This is a basic InfluxDB driver that covers the basic features of a
storage driver. It does not leverage any other feature such as
continuous query or cross aggregation metrics yet.
And does not reject measures too old according the archive policy.

It needs InfluxDB Server >= 0.9

Co-Author: Ilya Tyaptin <ityaptin@mirantis.com>
Co-Author: Mehdi Abaakouk <sileht@redhat.com>
Implements: influxdb-driver
Change-Id: I9754c8baff76f8712525e591d0a34571811b2a33

--- a/setup.cfg
+++ b/setup.cfg
@@ -57,6 +57,7 @@ gnocchi.storage =
     swift = gnocchi.storage.swift:SwiftStorage
     ceph = gnocchi.storage.ceph:CephStorage
     file = gnocchi.storage.file:FileStorage
+    influxdb = gnocchi.storage.influxdb:InfluxDBStorage
 
 gnocchi.indexer =
     null = gnocchi.indexer.null:NullIndexer
