--- a/tox.ini
+++ b/tox.ini
@@ -89,6 +89,26 @@ setenv = GNOCCHI_TEST_STORAGE_DRIVER=ceph
 basepython = python3.4
 commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
+[testenv:py27-postgresql-influxdb]
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=influxdb
+basepython = python2.7
+commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/setup-influxdb-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+
+[testenv:py27-mysql-influxdb]
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=influxdb
+basepython = python2.7
+commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/setup-influxdb-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+
+[testenv:py34-postgresql-influxdb]
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=influxdb
+basepython = python3.4
+commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/setup-influxdb-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+
+[testenv:py34-mysql-influxdb]
+setenv = GNOCCHI_TEST_STORAGE_DRIVER=influxdb
+basepython = python3.4
+commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/setup-influxdb-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+
 [testenv:py27-gate]
 setenv = OS_TEST_PATH=gnocchi/tests/gabbi
          GABBI_LIVE_FAIL_IF_NO_TEST=1
