refactor indexer.sqlalchemy
refactor indexer.sqlalchemy in way of using stevedore approach
for resources in SQLAlchemyIndexer

Change-Id: I21c5d3c7fea61a15b7061c45a2bb6472cf09048e

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,12 @@ packages =
     gnocchi
 
 [entry_points]
+gnocchi.indexer.resources =
+    generic = gnocchi.indexer.sqlalchemy_base:Resource
+    instance = gnocchi.ceilometer.resources.instance:InstanceSQLAlchemy
+    swift_account = gnocchi.ceilometer.resources.swift_account:SwiftAccountSQLAlchemy
+    volume = gnocchi.ceilometer.resources.volume:VolumeSQLAlchemy
+
 gnocchi.storage =
     null = gnocchi.storage.null:NullStorage
     swift = gnocchi.storage.swift:SwiftStorage
