Add ceph_account resource
That patch adds ceph object storage resource into gnocchi

Change-Id: I1a94d7292a22cf0e30dbc637e2d90d043a905ae8

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ gnocchi.indexer.resources =
     instance = gnocchi.ceilometer.resources.instance:InstanceSQLAlchemy
     swift_account = gnocchi.ceilometer.resources.swift_account:SwiftAccountSQLAlchemy
     volume = gnocchi.ceilometer.resources.volume:VolumeSQLAlchemy
+    ceph_account = gnocchi.ceilometer.resources.ceph_account:CephAccountSQLAlchemy
 
 gnocchi.storage =
     null = gnocchi.storage.null:NullStorage
@@ -66,6 +67,7 @@ gnocchi.ceilometer.resource =
     instance = gnocchi.ceilometer.resources.instance:Instance
     swift_account = gnocchi.ceilometer.resources.swift_account:SwiftAccount
     volume = gnocchi.ceilometer.resources.volume:Volume
+    ceph_account = gnocchi.ceilometer.resources.ceph_account:CephAccount
 
 [build_sphinx]
 all_files = 1
