Add network resource
That patch adds network resource into gnocchi

Change-Id: I2b8d4e7bf7798481204d9f8b56d4c17e228b53e3

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ gnocchi.indexer.resources =
     swift_account = gnocchi.ceilometer.resources.swift_account:SwiftAccountSQLAlchemy
     volume = gnocchi.ceilometer.resources.volume:VolumeSQLAlchemy
     ceph_account = gnocchi.ceilometer.resources.ceph_account:CephAccountSQLAlchemy
+    network = gnocchi.ceilometer.resources.network:NetworkSQLAlchemy
 
 gnocchi.storage =
     null = gnocchi.storage.null:NullStorage
@@ -68,6 +69,7 @@ gnocchi.ceilometer.resource =
     swift_account = gnocchi.ceilometer.resources.swift_account:SwiftAccount
     volume = gnocchi.ceilometer.resources.volume:Volume
     ceph_account = gnocchi.ceilometer.resources.ceph_account:CephAccount
+    network = gnocchi.ceilometer.resources.network:Network
 
 [build_sphinx]
 all_files = 1
