Add identity resource
That patch adds identity resource into gnocchi

Change-Id: I2d3ec5b4559007ebc2b3c8eea7806534773ca4ad

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ gnocchi.indexer.resources =
     volume = gnocchi.ceilometer.resources.volume:VolumeSQLAlchemy
     ceph_account = gnocchi.ceilometer.resources.ceph_account:CephAccountSQLAlchemy
     network = gnocchi.ceilometer.resources.network:NetworkSQLAlchemy
+    identity = gnocchi.ceilometer.resources.identity:IdentitySQLAlchemy
 
 gnocchi.storage =
     null = gnocchi.storage.null:NullStorage
@@ -70,6 +71,7 @@ gnocchi.ceilometer.resource =
     volume = gnocchi.ceilometer.resources.volume:Volume
     ceph_account = gnocchi.ceilometer.resources.ceph_account:CephAccount
     network = gnocchi.ceilometer.resources.network:Network
+    identity = gnocchi.ceilometer.resources.identity:Identity
 
 [build_sphinx]
 all_files = 1
